--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "emailjs-com": "^3.2.0",
+    "firebase": "^10.12.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
