--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.12.4",
+    "framer-motion": "^11.3.17",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
