--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "emailjs-com": "^3.2.0",
     "firebase": "^10.12.4",
     "framer-motion": "^11.3.17",
+    "js-cookie": "^3.0.5",
+    "mui-tel-input": "^5.1.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
