--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
